--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -12,3 +12,24 @@ a {
   width: 1170px;
   margin: 0 auto;
 }
+
+.copyrights {
+  background: #222222;
+  padding: 10px 0;
+  text-align: center;
+  width: 100%;
+}
+  
+.copyrights p {
+  margin-bottom: 5px;
+  color: #fff;
+  font-size: 15px
+}
+  
+.copyrights a {
+  color: #1abc9c;
+}
+.credits {
+  color: #999;
+}
+
