--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -32,6 +32,27 @@ header {
   float: left;
 }
 
+.header-center {
+  float: center;
+  margin-right: 100px ;
+  margin-left: 350px;
+}
+
+.header-center a {
+  line-height: 65px;
+  padding: 0 25px;
+  color: white;
+  display: block;
+  float: left;
+  transition: all 0.5s;
+  
+}
+
+.header-center a:hover {
+  background-color: rgba(255, 255, 255, 0.3);
+}
+
+
 .header-right {
   float: right;
   margin-right: -25px;
