--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,7 +1,7 @@
 /* Code CSS untuk tugas website */
 body{
   margin: 0;
-  font-family: "Arial";
+  font-family: "Lucida Grande";
 }
 a {
   text-decoration: none;
@@ -95,6 +95,7 @@ header {
   background: #3498db;
   margin-top: 40px;
   margin-bottom: 40px;
+  
 }
 
 .ps {
@@ -141,6 +142,45 @@ header {
   text-transform: uppercase;
   font-size: 22px;
 }
+/* Bagian Footer */
+form {
+  text-align: center;
+}
+
+.form-control {
+  width: 600px;
+  background: transparent;
+  border: none;
+  outline: none;
+  border-bottom: 1px solid gray;
+  font-size: 20px;
+  margin-bottom: 10px;
+}
+
+input {
+  height: 30px;
+  text-align: center;
+
+}
+.contact-form h2{
+  padding-bottom: 20px;
+  padding-top: 10px;
+}
+
+.contact-form h3{
+  margin-bottom: 10px;
+}
+
+.contact-submit {
+  background-color: #18455e;
+  color: white;
+  padding: 30px 180px;
+  font-size: 20px;
+  margin-bottom: 20px;
+  padding-top: 20px;
+  text-align: center;
+  cursor: pointer;
+}
 
 /* Bagian Footer */
 .copyrights {
@@ -159,6 +199,7 @@ header {
 .copyrights a {
   color: #1abc9c;
 }
+
 .credits {
   color: #999;
 }
