--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -7,13 +7,14 @@ a {
   text-decoration: none;
 }
 
-/* Bagian Pengembangan Awal */
 .container {
   max-width: 1170px;
   width: 100%;
   padding: 0 15px;
   margin: 0 auto;
 }
+
+/* Bagian Header */
 header {
   height: 65px;
   width: 100%;
@@ -45,7 +46,7 @@ header {
   display: block;
   float: left;
   transition: all 0.5s;
-  
+
 }
 
 .header-center a:hover {
@@ -71,6 +72,23 @@ header {
   background-color: rgba(255, 255, 255, 0.3);
 }
 
+/* Bagian Utama */
+.main-section{
+  padding:150px 0 100px 0;
+  background-image: url('../images/background.png');
+  background-size: cover;
+  border-bottom:2px solid rgba(255,255,255,0.5);
+  color: white;
+}
+.main-section h1{
+  font-size: 40px;
+  opacity: 0.8;
+}
+.main-section p{
+  font-size: 20px;
+  opacity: 0.8;
+  width: 50%;
+}
 
 /* Bagian Anggota Kelompok */
 .team-section {
@@ -95,7 +113,7 @@ header {
   background: #3498db;
   margin-top: 40px;
   margin-bottom: 40px;
-  
+
 }
 
 .ps {
