--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -16,7 +16,7 @@ a {
 
 /* Bagian Header */
 header {
-  height: 65px;
+  height: 70px;
   width: 100%;
   background-color: rgba(34, 49, 52, 0.9);
   position :fixed;
@@ -25,8 +25,7 @@ header {
 }
 
 .logo {
-  width: 124px;
-  margin-top: 20px;
+  margin: 5px;
 }
 
 .header-left {
@@ -40,7 +39,7 @@ header {
 }
 
 .header-center a {
-  line-height: 65px;
+  line-height: 70px;
   padding: 0 25px;
   color: white;
   display: block;
@@ -90,6 +89,9 @@ header {
   width: 50%;
 }
 
+.main-section span{
+  color: yellow;
+}
 /* Bagian Anggota Kelompok */
 .team-section {
   overflow: hidden;
