--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -93,75 +93,87 @@ header {
   color: yellow;
 }
 /* Bagian Anggota Kelompok */
-.team-section {
-  overflow: hidden;
-  text-align: center;
-  background: #34495e;
-  padding: 60px;
+*{
+	box-sizing: border-box;
 }
 
-.team-section h1 {
-  text-transform: uppercase;
-  margin-bottom: 60px;
-  color: white;
-  font-size: 40px;
+.container{
+	max-width:1140px;
+	margin:auto;
+	position: relative;
+	min-height: 1px;
 }
 
-.border {
-  display: block;
-  margin: auto;
-  width: 160px;
-  height: 3px;
-  background: #3498db;
-  margin-top: 40px;
-  margin-bottom: 40px;
-
+.team{
+	min-height: 68vh;
+	padding:60px 15px;
+	background-color:#34495e; 
+	float: left;
+	width: 100%;
 }
 
-.ps {
-  margin-bottom: 40px;
+.team h1{
+	font-size: 36px;
+	font-family: open sans;
+	font-weight: 700;
+	color:#ffffff;
+	margin:0;
+	padding-bottom:60px;
+	text-align: center;
 }
 
-.ps a{
-  display: inline-block;
-  margin: 0 30px;
-  width: 160px;
-  height: 160px;
-  overflow: hidden;
-  border-radius: 50%;
+.team .card{
+	width:20%;
+	float: left;
+	padding:0px 15px;
 }
 
-.ps a img {
-  width: 100%;
-  filter: grayscale(100%);
-  transition: 0.4 all;
+.team .card .box {
+	padding:15px;
+	background-color: #2d3035;
+	border-radius:5px;
+	transition: margin 1s ease,box-shadow 1s ease;
 }
 
-.ps a:hover > img {
-  filter: none;
+.team .card .box:hover{
+	margin-top:-15px;
+	box-shadow:0px 0px 40px black;
 }
 
-.section {
-  width: 600px;
-  margin: auto;
-  font-size: 20px;
-  color: white;
-  text-align: center;
-  height: 0;
-  overflow: hidden;
+.team .card .box img{
+	width:150px;
+	display: block;
+	margin:10px auto;
+	border-radius:50%;
 }
 
-.section:target {
-  height: auto;
+.team .card .box h4{
+	font-size: 20px;
+	font-family: open sans;
+	margin:20px 0px 10px;
+	color:#ea5e71;
+	text-align: center;
+	font-weight: 700;
 }
 
-.name {
-  display: block;
-  margin-bottom: 30px;
-  text-align: center;
-  text-transform: uppercase;
-  font-size: 22px;
+.team .card .box h5{
+	font-size:16px;
+	font-family: open sans;
+	font-weight: 600;
+	color:#b9b9b9;
+	margin:0px 0px 15px;
+	text-align: center;
 }
+.team .card .box p{
+	color:#b9b9b9;
+	font-size: 15px;
+	font-family: open sans;
+	font-weight: 400;
+	line-height: 24px;
+	text-align: center;
+	padding:0px 20px;
+}
+
 /* Bagian Footer */
 form {
   text-align: center;
