update header dan bagian utama

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,10 +1,17 @@
 /* Code CSS untuk tugas website */
 body{
   margin: 0;
+}
+h1, h2, h3 {
+    font-family: sans-serif;
+}
+p {
   font-family: "Lucida Grande";
 }
+
 a {
   text-decoration: none;
+  font-family: sans-serif;
 }
 
 .container {
@@ -16,7 +23,7 @@ a {
 
 /* Bagian Header */
 header {
-  height: 70px;
+  height: 100px;
   width: 100%;
   background-color: rgba(34, 49, 52, 0.9);
   position :fixed;
@@ -25,17 +32,18 @@ header {
 }
 
 .logo {
-  margin: 5px;
+  margin: 3px 5px 5px 5px;
+  width:270px;
+  height:100px;
 }
 
 .header-left {
+  width:270px;
   float: left;
 }
 
 .header-center {
   float: center;
-  margin-right: 100px ;
-  margin-left: 350px;
 }
 
 .header-center a {
@@ -55,11 +63,11 @@ header {
 
 .header-right {
   float: right;
-  margin-right: -25px;
+  margin-right: 25px;
 }
 
 .header-right a {
-  line-height: 65px;
+  line-height: 100px;
   padding: 0 25px;
   color: white;
   display: block;
@@ -73,24 +81,37 @@ header {
 
 /* Bagian Utama */
 .main-section{
-  padding:150px 0 100px 0;
+  padding:120px 0 50px 0;
   background-image: url('../images/background.jpg');
   background-size: cover;
-  border-bottom:2px solid rgba(255,255,255,0.5);
+  border-bottom:1px solid rgba(255,255,255,0.3);
   color: white;
 }
 .main-section h1{
+  margin-top:70px;
   font-size: 40px;
   opacity: 0.8;
 }
 .main-section p{
   font-size: 20px;
-  opacity: 0.8;
+  opacity: 0.7;
   width: 50%;
 }
 
 .main-section span{
   color: yellow;
+}
+.main-section a{
+  background-color: rgba(14,255,200,1);
+  padding: 10px;
+  display: block;
+  text-align: center;
+  width:180px;
+  color: #000;
+  border-radius: 5px;
+}
+.main-section a:hover{
+  background-color: rgba(14,255,200,0.7);
 }
 /* Bagian Anggota Kelompok */
 *{
