tambah background formulir

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -127,7 +127,7 @@ header {
 
 .team{
 	min-height: 68vh;
-	padding:60px 15px;
+	padding: 50px 15px;
 	background-color:#34495e;
 	float: left;
 	width: 100%;
@@ -196,8 +196,13 @@ header {
 }
 
 /* Bagian Footer */
+.contact-form {
+  background-image: url('../images/contact.jpg');
+  background-size: cover;
+}
 form {
   text-align: center;
+  color: black;
 }
 
 .form-control {
@@ -205,7 +210,7 @@ form {
   background: transparent;
   border: none;
   outline: none;
-  border-bottom: 1px solid gray;
+  border-bottom: 1px solid black;
   font-size: 20px;
   margin-bottom: 10px;
 }
@@ -213,7 +218,11 @@ form {
 input {
   height: 30px;
   text-align: center;
-
+  font-weight: bold;
+  color: #000;
+}
+textarea {
+  font-weight: bold;
 }
 .contact-form h2{
   padding-bottom: 20px;
@@ -233,6 +242,7 @@ input {
   padding-top: 20px;
   text-align: center;
   cursor: pointer;
+  border-radius: 10px;
 }
 
 /* Bagian Footer */
