Munculkan menu icon di responsive smartphone (belum bisa diklik))

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -10,6 +10,9 @@
     }
     .menu-icon {
         display: block;
+        float: right;
+        color: white;
+        
     }
     /* .card {
         width: 100%;
