--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,4 +1,8 @@
 /* Code CSS untuk tugas website */
+* {
+  box-sizing: border-box;
+}
+
 body{
   margin: 0;
 }
@@ -87,6 +91,7 @@ header {
   border-bottom:1px solid rgba(255,255,255,0.3);
   color: white;
 }
+
 .main-section h1{
   margin-top:70px;
   font-size: 40px;
