--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -25,7 +25,7 @@ a {
   margin: 0 auto;
 }
 
-/* Bagian Header */
+
 /* Bagian Header */
 header {
   height: 75px;
@@ -125,13 +125,13 @@ ul.topnav li.iconmenu {
 *{
 	box-sizing: border-box;
 }
-
+/*
 .container{
 	max-width:1140px;
 	margin:auto;
 	position: relative;
 	min-height: 1px;
-}
+} */
 
 .team{
 	min-height: 68px;
@@ -257,20 +257,25 @@ textarea {
 .copyrights {
   background: #222222;
   padding: 10px 0;
-  text-align: center;
   width: 100%;
+  height: 30px;
+  line-height: 30px;
+  box-sizing: content-box;
 }
 
-.copyrights p {
+span#copyrights {
   margin-bottom: 5px;
   color: #fff;
   font-size: 15px
+  float: left;
 }
 
-.copyrights a {
+span#credits a {
   color: #1abc9c;
 }
 
-.credits {
+span#credits {
   color: #999;
+  float: right;
+  padding-right: 10px;
 }
