--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -59,8 +59,8 @@ header {
 
 ul.topnav {
   list-style-type: none;
-  margin: 0 0 0 320px;
-  padding: 0;
+  margin: 0;
+  padding-left: 50px;
   overflow: hidden;
 }
 ul.topnav li {
