--- a/css/responsive.css
+++ b/css/responsive.css
@@ -9,26 +9,7 @@
     display: none;
   }
 
-
 /*Responsife Bagian Utama*/
-/*
-.judul  {
-  margin-top:10px;
-  top:25px;
-}
-.judul h1{
-    font-size: 20px;
-    letter-spacing: 10px;
-}
-.judul h2{
-    font-size: 25px;
-    letter-spacing: 10px;
-}
-.judul p#p1{
-  font-size: 18px;
-  line-height: 20px;
-}
-*/
 .judul  {
   top: 40px;
   margin-top:20px;
@@ -43,22 +24,36 @@
     font-size: 30px;
 }
 .judul p#p1{
-  font-size: 20px;
+  font-size: 17px;
   line-height: 25px;
 }
 
 .judul p#p2{
-  margin-top:20px;
+  font-size:15px;
+  margin-top: 15px;
+
 }
 
 .main-section a{
-  background-color: rgba(14,255,200,1);
   padding: 10px;
   width:180px;
   border-radius: 5px;
 }
 
-
+/* Responsive untuk Anggota Kelompok */
+#team-section{
+  padding-bottom:30px;
+}
+.col-20 {
+  width:50%;
+  text-align: center;
+}
+.box img{
+  padding-bottom:50px;
+}
+.box p{
+  padding: 0px 50px 30px 50px;
+}
 /* Responsive untuk Footer */
   span#copyrights {
     font-size: 12px;
@@ -91,7 +86,7 @@
   text-align: center;
   width:100%;
   left: 0;
-  top:15px;
+  top:0px;
   padding: 0 10px 10px 10px;;
 }
 .judul h1#satu, .judul h1#dua{
@@ -119,16 +114,21 @@
 .main-section a{
   padding: 10px;
   margin:0 auto;
+  width:100%;
+}
+
+/* Responsive untuk Anggota Kelompok */
+#team-section h1{
+  font-size: 15px;
+  letter-spacing: 5px;
+}
+.col-20 {
+  width:100%;
+  text-align: center;
 }
 
 
-    /* .card {
-        width: 100%;
-    }
-    .box {
-        width: 50%;
-    } */
-    /* mau ubah responsive card box belum bisa */
+
 /* Responsive Formulir */
 .col-25, .col-75, input[type=submit] {
   width: 100%;
