--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -149,20 +149,22 @@ ul.topnav li.iconmenu {
 }
 
 .judul p#p2{
-  margin-top:40px;
+  margin-top: 40px;
+  font-size: 20px;
+  letter-spacing: 2px;
 }
 
 .main-section a{
-  background-color: rgba(14,255,200,1);
-  padding: 10px;
+  background-color: #009022;
+  padding: 20px;
   display: block;
   text-align: center;
   width:180px;
-  color: #000;
+  color: #fff;
   border-radius: 5px;
 }
 .main-section a:hover{
-  background-color: rgba(14,255,200,0.7);
+  background-color: #09b832;
 }
 
 /* Bagian Anggota Kelompok */
@@ -170,6 +172,7 @@ ul.topnav li.iconmenu {
   background-color:#34495e;
   text-align:center;
   width:100%;
+  padding-bottom: 80px;
 }
 
 .col-20 {
@@ -179,61 +182,47 @@ ul.topnav li.iconmenu {
 }
 
 #team-section h1{
-	font-size: 30px;
+	font-size: 20px;
 	color:#ffffff;
-  margin:0;
-  padding:10px 0;
+  margin:0 auto;
+  padding-top:30px;
   letter-spacing: 10px;
 }
 
 .box {
-	padding:15px;
-	background-color: #2d3035;
-	border-radius:5px;
-  border:2px solid white;
-  height: 390px;
-  margin:0 2px;
-
-}
-
-.box:hover{
-	box-shadow:0px 0px 40px black;
+	position: relative;
 }
 
 .box img{
 	width:150px;
 	display: block;
 	margin:10px auto;
-	border-radius:50%;
+  opacity:0.8;
+}
+.box img:hover{
+  opacity:1;
 }
 
-.box h4{
-	font-size: 20px;
-	font-family: open sans;
-	margin:20px 0px 10px;
-	color:#ea5e71;
-	text-align: center;
-	font-weight: 700;
-}
-
-.box h5{
-	font-size:16px;
-	font-family: open sans;
-	font-weight: 600;
-	color:#b9b9b9;
-	margin:0px 0px 15px;
-	text-align: center;
-}
 .box p{
-	color:#b9b9b9;
-	font-size: 15px;
-	font-family: open sans;
-	font-weight: 400;
-	line-height: 24px;
-	text-align: center;
-	padding:0px 20px;
-}
+	font-size:14px;
+	color:#9e9e9e;
+  position: absolute;
+  top:160px;
+  width: 100%;
+  padding: 0 5px;
 
+}
+span.namaku, span.asal {
+  font-size: 12px;
+  opacity:0.7;
+}
+span.namaku {
+  color: yellow;
+  font-weight: bold;
+}
+span.asal {
+  color: white;
+}
 
 /* Bagian Formulir */
 
