--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -99,6 +99,8 @@ ul.topnav li.iconmenu {
 .container#slider {
   overflow: hidden;
   padding:0;
+  width:100%;
+  height: 100%;
   position:relative;
 }
 
@@ -128,30 +130,33 @@ ul.topnav li.iconmenu {
 
 .judul  {
   position: absolute;
-  top: 40px;
-  left: 40px;
-  width:75%;
+  top: 90px;
+  margin-top:75px;
+  left: 50px;
+  width:100%;
   opacity: 0.8;
 }
 .judul h1 {
   letter-spacing: 10px;
   display: block;
+  margin:0 0 5px 0;
 }
 .judul h1#satu{
-    font-size: 35px;
+    font-size: 40px;
 }
 .judul h1#dua{
-    font-size: 45px;
+    font-size: 50px;
 }
 .judul p#p1{
-  font-size: 25px;
+  font-size: 20px;
   line-height: 35px;
+  letter-spacing: 3px;
 }
 
 .judul p#p2{
   margin-top: 40px;
   font-size: 20px;
-  letter-spacing: 2px;
+  letter-spacing: 1px;
 }
 
 .main-section a{
@@ -287,28 +292,33 @@ input[type=submit]:hover {
 
 
 /* Bagian Footer */
-.copyrights {
-  background: #222222;
+.copyrights .container {
+  background-color: #222222;
   padding: 10px 0;
   width: 100%;
-  height: 30px;
-  line-height: 30px;
+  height: 20px;
   box-sizing: content-box;
 }
 
-span#copyrights {
-  margin-bottom: 5px;
-  color: #fff;
-  font-size: 15px
-  float: left;
+p#copyright, p#credits {
+  margin:0;
+  line-height: 25px;
 }
 
-span#credits a {
+p#copyright {
+  color: #fff;
+  font-size: 12px;
+  float: left;
+  padding-left: 20px;
+}
+
+p#credits a {
   color: #1abc9c;
 }
 
-span#credits {
+p#credits {
   color: #999;
   float: right;
-  padding-right: 10px;
+  font-size: 10px;
+  padding-right: 20px;
 }
